--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$2AMgDezBJQ.gJK3Wt1VTQO9dR6jKH6b5ErkkxBbtOLfb0bXkS9eWm"
+# 	- password: java.lang.String = "$2a$05$5.JMh25izRpdUzBcQ1g9p.Z57xZfYBV4JY.nUG78oPjFC1qDi.lA2"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$nhoaC20xVgX5ZnR7j0a8au2dZVc9DV16z/QWKoEsCH8dTRZQtpsu6"
+# 	- password: java.lang.String = "$2a$05$ZFWqMe9dua7pwXEMmpTDFuP58avJMTrB05oplxDc7TFGINgisBn7q"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -76,4 +76,21 @@ administratorAuthenticated=5
 # 	- userAccount: acme.framework.entities.UserAccount = acme.framework.entities.UserAccount{id=3, version=0}
 # 	from acme.framework.entities.Authenticated:
 # 	- serialVersionUID: long = 1
+
+
+# ./src/main/population/sample-data.xml
+
+shout01=6
+
+# acme.entities.shouts.Shout{id=6, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 6
+# 	- version: int = 0
+# 	from acme.entities.shouts.Shout:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Bob Dylan"
+# 	- text: java.lang.String = "Tengo un premio nobel de literatura"
+# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
 
