--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$//Tc/QMKjnRPDMZXCx8HneP.gsdo7TfZBM54l0YaaLYdcvrmt8yOe"
+# 	- password: java.lang.String = "$2a$05$DCYxLk4jWwVm2hvGyKa9teiVtkCXKVw62PDdoFP1HQRcROBrCcJS."
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$0wIILP4GuejfOpBZ22au9OJI7oPclx9J0UdkLNogthiumOIPZhWQ6"
+# 	- password: java.lang.String = "$2a$05$F8ADnSnqXCsBgcEG./upqOlrVXahVlOt.IBNcTkKF1nv.FSmpTzY6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -107,5 +107,20 @@ FernandezBulletin01=7
 # 	- author: java.lang.String = "Antonio"
 # 	- description: java.lang.String = "Tengo un premio nobel de literatura"
 # 	- language: java.lang.String = "Ingles"
+# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
+
+GuerreroBulletin01=8
+
+# acme.entities.bulletins.GuerreroBulletin{id=8, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 8
+# 	- version: int = 0
+# 	from acme.entities.bulletins.GuerreroBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "Martin"
+# 	- description: java.lang.String = "Tengo un premio nobel de música"
+# 	- instrument: java.lang.String = "Piano"
 # 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
 
