--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$DCYxLk4jWwVm2hvGyKa9teiVtkCXKVw62PDdoFP1HQRcROBrCcJS."
+# 	- password: java.lang.String = "$2a$05$Xfh1W4EUJkdd3JnQwWxTf.cN4X8JZAD1wmg7SLW/J9As2FyZPc0Dm"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$F8ADnSnqXCsBgcEG./upqOlrVXahVlOt.IBNcTkKF1nv.FSmpTzY6"
+# 	- password: java.lang.String = "$2a$05$YaF//YwrW9NggEHrWEHevOfIqJ1hFOWzh4.dhmsh9w7x0xKJzm.HG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -122,5 +122,20 @@ GuerreroBulletin01=8
 # 	- author: java.lang.String = "Martin"
 # 	- description: java.lang.String = "Tengo un premio nobel de música"
 # 	- instrument: java.lang.String = "Piano"
+# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
+
+SotoBulletin01=9
+
+# acme.entities.bulletins.SotoBulletin{id=9, version=0}
+# 	from java.lang.Object:
+# 	from acme.framework.entities.DomainEntity:
+# 	- serialVersionUID: long = 1
+# 	- id: int = 9
+# 	- version: int = 0
+# 	from acme.entities.bulletins.SotoBulletin:
+# 	- serialVersionUID: long = 1
+# 	- author: java.lang.String = "David"
+# 	- description: java.lang.String = "Tengo un premio nobel de música"
+# 	- song: java.lang.String = "Bohemian Rhapsody"
 # 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
 
