--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -11,18 +11,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-
-# 	- password: java.lang.String = "$2a$05$1ZANad.cEl0JpfFQAnIov.4A5VpTX7eKxsykC40SPr32viUuXT9dS"
-
-
-# 	- password: java.lang.String = "$2a$05$r9iRJO3CD./G94HzTBNzW.DVKiKlGRJY1J8cxiVHRTmPHa3ln.qpm"
-
-# 	- password: java.lang.String = "$2a$05$qn.rdYv5qjuZEedPK5PqJu3TO8MaFk6NHLjnItit6N1KRNnWaO8b."
-
-# 	- password: java.lang.String = "$2a$05$Xfh1W4EUJkdd3JnQwWxTf.cN4X8JZAD1wmg7SLW/J9As2FyZPc0Dm"
-
-
-
+# 	- password: java.lang.String = "$2a$05$Hn.TrXi2L97nJjja/7r88eoD45MbAv1vKPwrODQxgAFaUNAes7q1."
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -53,18 +42,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-
-# 	- password: java.lang.String = "$2a$05$prkZ64g9Rcu30HqfWHuZ7OCNMo6y.8gzodurIbf2QjtBwiEaWaOeK"
-
-
-# 	- password: java.lang.String = "$2a$05$Wq3xdKcEA1cQ1wLtg8FA.uzLsNUxh9kBZfud4QO.PKU5bxKZfId2O"
-
-
-# 	- password: java.lang.String = "$2a$05$HPpx09WaC7e486awHTVkj.zp2BM5TaO0HyiG6pSv5APeA0G5bgMrS"
-
-# 	- password: java.lang.String = "$2a$05$YaF//YwrW9NggEHrWEHevOfIqJ1hFOWzh4.dhmsh9w7x0xKJzm.HG"
-
-
+# 	- password: java.lang.String = "$2a$05$vk5FhDBC6OHTwlj5Js1kDe9E30R0zSaW/ce.3nEpUuOl/VcxmwMtq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -97,108 +75,4 @@ administratorAuthenticated=5
 # 	- userAccount: acme.framework.entities.UserAccount = acme.framework.entities.UserAccount{id=3, version=0}
 # 	from acme.framework.entities.Authenticated:
 # 	- serialVersionUID: long = 1
-
-
-# ./src/main/population/sample-data.xml
-
-shout01=6
-
-# acme.entities.shouts.Shout{id=6, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 6
-# 	- version: int = 0
-# 	from acme.entities.shouts.Shout:
-# 	- serialVersionUID: long = 1
-# 	- author: java.lang.String = "Bob Dylan"
-# 	- text: java.lang.String = "Tengo un premio nobel de literatura"
-# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
-
-FernandezBulletin01=7
-
-# acme.entities.bulletins.FernandezBulletin{id=7, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 7
-# 	- version: int = 0
-# 	from acme.entities.bulletins.FernandezBulletin:
-# 	- serialVersionUID: long = 1
-# 	- author: java.lang.String = "Antonio"
-# 	- description: java.lang.String = "Tengo un premio nobel de literatura"
-# 	- language: java.lang.String = "Ingles"
-# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
-
-GuerreroBulletin01=8
-
-# acme.entities.bulletins.GuerreroBulletin{id=8, version=0}
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 8
-# 	- version: int = 0
-# 	from acme.entities.bulletins.GuerreroBulletin:
-# 	- serialVersionUID: long = 1
-# 	- author: java.lang.String = "Martin"
-# 	- description: java.lang.String = "Tengo un premio nobel de música"
-# 	- instrument: java.lang.String = "Piano"
-# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
-
-GarciaBulletin01=9
-
-# acme.entities.bulletins.GarciaBulletin{id=9, version=0}
-# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
-
-DelgadoBulletin01=9
-
-# acme.entities.bulletins.DelgadoBulletin{id=9, version=0}
-
-# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
-
-
-HuBulletin01=9
-
-# acme.entities.bulletins.HuBulletin{id=9, version=0}
-
-
-SotoBulletin01=9
-
-# acme.entities.bulletins.SotoBulletin{id=9, version=0}
-
-
-
-# 	from java.lang.Object:
-# 	from acme.framework.entities.DomainEntity:
-# 	- serialVersionUID: long = 1
-# 	- id: int = 9
-# 	- version: int = 0
-
-# 	from acme.entities.bulletins.GarciaBulletin:
-# 	- serialVersionUID: long = 1
-# 	- author: java.lang.String = "Martin"
-# 	- description: java.lang.String = "Tengo un US Open"
-# 	- sport: java.lang.String = "Tennis"
-# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
-
-
-
-# 	from acme.entities.bulletins.DelgadoBulletin:
-# 	- serialVersionUID: long = 1
-# 	- author: java.lang.String = "Jose"
-# 	- numWallet: java.lang.String = "3241fg"
-# 	- initiative: java.lang.String = "Invertir"
-# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
-
-
-
-
-
-# 	from acme.entities.bulletins.SotoBulletin:
-# 	- serialVersionUID: long = 1
-# 	- author: java.lang.String = "David"
-# 	- description: java.lang.String = "Tengo un premio nobel de música"
-# 	- song: java.lang.String = "Bohemian Rhapsody"
-
-# 	- moment: java.util.Date = <<Sun Aug 18 15:54:00 CEST 2019>>
 
