--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>acme</groupId>
-	<artifactId>acme-jobs</artifactId>
+	<artifactId>Acme-Jobs</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
 
-	<name>acme-jobs</name>
+	<name>Acme-Jobs</name>
 	<description>This is the Acme Jobs Project for the students of Design &amp; Testing.</description>
 
 	<parent>
