--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,10 @@
 server.servlet.contextPath						= /acme-jobs
 server.port										= 8080
 
-spring.datasource.url							= jdbc:mysql://localhost:3306/Acme-Jobs?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username						= acme-user
-spring.datasource.password						= ACME-Us3r-P@ssw0rd
+spring.datasource.url							= \
+	jdbc:mysql://bemvmwp9ij7n75mvxyz3-mysql.services.clever-cloud.com:3306/bemvmwp9ij7n75mvxyz3
+spring.datasource.username						= ujpacfprax00dpiw
+spring.datasource.password						= Co2WK77Qp6DHkP3V3jIp
 
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
