--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$i9lO2h8nQiE2h4PqTJNUb.wFhCh/P5spcikJlt4G1MgXlYWHNigYe"
+# 	- password: java.lang.String = "$2a$05$cvXo5/rG87/JGxav77YJKuvKkflr5e.gEtDkBWFnehGZCY38YJphG"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$.lFSTDh/1elvQyt.bwWnk.X2J9HDq.gBA45DS5gYlBfNCw0K9Mt5i"
+# 	- password: java.lang.String = "$2a$05$Jy7SBjgfjt8qz0jClgQ2O.oh.opU3Is.2r8rLyyMcvqps0AuhLmtC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
