--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,7 @@
 server.servlet.contextPath						= /acme-jobs
 server.port										= 8080
 
-spring.datasource.url							= \
-	jdbc:mysql://bemvmwp9ij7n75mvxyz3-mysql.services.clever-cloud.com:3306/bemvmwp9ij7n75mvxyz3
+spring.datasource.url							= jdbc:mysql://bemvmwp9ij7n75mvxyz3-mysql.services.clever-cloud.com:3306/bemvmwp9ij7n75mvxyz3
 spring.datasource.username						= ujpacfprax00dpiw
 spring.datasource.password						= Co2WK77Qp6DHkP3V3jIp
 
